<resources>
    <string name="app_name">YACM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YACM</string>
    <string name="nav_header_subtitle">Yet Another Cycling Manager</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ic_menu_settings">Settings</string>
    <string name="ic_menu_account">Account</string>
    <string name="ic_menu_logout">Logout</string>
    <string name="title_create">Create Event</string>
    <string name="home_welcome">Select an Event on the list to start</string>
    <string name="title_activity_home">Home</string>
    <string-array name="events_list">
        <item>Midterms DETI Run</item>
        <item>Gellers Cup</item>
        <item>Tour de Aveiro</item>
        <item>Tour de France</item>
        <item>Tour de Lisboa</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginMessage">Let\'s Start!</string>
    <string name="intro1_start"><![CDATA[Let\'s get started >]]></string>
    <string name="intro1_title">Managing cycling events \n Made easy</string>
    <string name="login_copyright">© Paulo, Pedro 2019</string>
</resources>
